<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    tools:context=".Settings">

    <TextView
        android:id="@+id/settings_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="26dp"
        android:text="@string/settings_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textColor="@color/colorPrimary" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/settings_title"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="26dp"
        android:layout_marginEnd="26dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_weather"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary" />

        <Button
            android:id="@+id/weather_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="DMI.DK" />

    </LinearLayout>

    <Button
        android:id="@+id/disclaimer_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary"
        android:text="@string/settings_disclaimerBtn" />

</RelativeLayout>