<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/note_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="DATE_NOT_IMPLEMENTED" />

        <View
            android:id="@+id/splitter7"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:paddingVertical="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:maxLines="1"
                    android:text="@string/noteCard_sailSpeed"
                    android:textAlignment="center"
                    app:autoSizeTextType="uniform" />

                <EditText
                    android:id="@+id/note_shipSpeed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="km/t"
                    android:inputType="textPersonName" />
            </LinearLayout>

            <View
                android:id="@+id/splitter1"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@color/colorPrimary"
                android:paddingVertical="10dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:maxLines="1"
                    android:text="@string/noteCard_sailDirection"
                    android:textAlignment="center"
                    app:autoSizeTextType="uniform" />

                <EditText
                    android:id="@+id/note_shipDirection"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="N/S/Ø/V"
                    android:inputType="textPersonName" />
            </LinearLayout>

            <View
                android:id="@+id/splitter2"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@color/colorPrimary"
                android:paddingVertical="10dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:maxLines="1"
                    android:text="@string/noteCard_windSpeed"
                    android:textAlignment="center"
                    app:autoSizeTextType="uniform" />

                <EditText
                    android:id="@+id/note_windSpeed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="km/t"
                    android:inputType="textPersonName" />
            </LinearLayout>

            <View
                android:id="@+id/splitter3"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@color/colorPrimary"
                android:paddingVertical="10dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:maxLines="1"
                    android:text="@string/noteCard_windDirection"
                    android:textAlignment="center"
                    app:autoSizeTextType="uniform" />

                <EditText
                    android:id="@+id/note_windDirection"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="N/S/Ø/V"
                    android:inputType="textPersonName" />
            </LinearLayout>

        </LinearLayout>

        <View
            android:id="@+id/splitter"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:paddingVertical="10dp" />

    </LinearLayout>

</androidx.cardview.widget.CardView>
