<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateTrip"
    android:background="@drawable/background_gradient">

    <ImageView
        android:id="@+id/shipImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:adjustViewBounds="true"
        android:fadingEdge="horizontal"
        android:scaleType="fitStart"
        app:srcCompat="@mipmap/image4" />

    <TextView
        android:id="@+id/settings_title2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="26dp"
        android:text="@string/newTrip_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textColor="@color/colorPrimary"
        android:textSize="35dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/parameters"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/endTripBtn"
        android:layout_below="@+id/shipImage"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View
                android:id="@+id/splitter"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/colorPrimary"
                android:paddingVertical="10dp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <ImageButton
                    android:id="@+id/addNoteBtn"
                    android:layout_width="55dp"
                    android:layout_height="0dp"
                    android:background="@drawable/button_blue"
                    android:scaleType="fitCenter"
                    app:layout_constraintBottom_toBottomOf="@+id/linearLayout5"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/linearLayout5"
                    tools:src="@drawable/icon_add" />

                <LinearLayout
                    android:id="@+id/linearLayout4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="@+id/linearLayout5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/linearLayout5">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="55dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:adjustViewBounds="true"
                        app:srcCompat="@drawable/icon_boatspeed" />

                    <View
                        android:id="@+id/splitter10"
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="@color/colorPrimary"
                        android:paddingVertical="10dp" />

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="55dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:adjustViewBounds="true"
                        android:foregroundGravity="center"
                        app:srcCompat="@drawable/icon_windspeed" />
                </LinearLayout>

                <View
                    android:id="@+id/splitter3"
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/colorPrimary"
                    android:paddingVertical="10dp"
                    app:layout_constraintStart_toEndOf="@+id/linearLayout4"
                    tools:layout_editor_absoluteY="5dp" />

                <LinearLayout
                    android:id="@+id/linearLayout5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/addNoteBtn"
                    app:layout_constraintStart_toEndOf="@+id/splitter3"
                    app:layout_constraintTop_toTopOf="parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:maxLines="1"
                            android:text="@string/noteCard_sailSpeed"
                            android:textAlignment="center"
                            android:textStyle="bold"
                            app:autoSizeTextType="uniform" />

                        <EditText
                            android:id="@+id/note_shipSpeed"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:hint="km/t"
                            android:inputType="textPersonName"
                            android:textSize="14sp" />

                        <View
                            android:id="@+id/splitter11"
                            android:layout_width="match_parent"
                            android:layout_height="2dp"
                            android:layout_weight="1"
                            android:background="@color/colorPrimary"
                            android:paddingVertical="10dp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:maxLines="1"
                            android:text="@string/noteCard_windSpeed"
                            android:textAlignment="center"
                            android:textStyle="bold"
                            app:autoSizeTextType="uniform" />

                        <EditText
                            android:id="@+id/note_windSpeed"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:hint="km/t"
                            android:inputType="textPersonName"
                            android:textSize="14sp" />

                    </LinearLayout>

                    <View
                        android:id="@+id/splitter2"
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@color/colorPrimary"
                        android:paddingVertical="10dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:maxLines="1"
                            android:text="@string/noteCard_sailDirection"
                            android:textAlignment="center"
                            android:textStyle="bold"
                            app:autoSizeTextType="uniform" />

                        <EditText
                            android:id="@+id/note_shipDirection"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:hint="N/S/Ø/V"
                            android:inputType="textPersonName"
                            android:textSize="14sp" />

                        <View
                            android:id="@+id/splitter12"
                            android:layout_width="match_parent"
                            android:layout_height="2dp"
                            android:layout_weight="1"
                            android:background="@color/colorPrimary"
                            android:paddingVertical="10dp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:maxLines="1"
                            android:text="@string/noteCard_windDirection"
                            android:textAlignment="center"
                            android:textStyle="bold"
                            app:autoSizeTextType="uniform" />

                        <EditText
                            android:id="@+id/note_windDirection"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:hint="N/S/Ø/V"
                            android:inputType="textPersonName"
                            android:textSize="14sp" />
                    </LinearLayout>

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:id="@+id/splitter5"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/colorPrimary"
                android:paddingVertical="10dp" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/notes_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </androidx.recyclerview.widget.RecyclerView>

    </LinearLayout>

    <Button
        android:id="@+id/endTripBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:background="#DC0F14"
        android:text="@string/newTrip_endBtn" />


</RelativeLayout>